# cscg20

./: .gitignore  README.md  key  key.pub
captcha/: api.py  cluster.py  exp1.py  features.py  get-training-data.py  helpers.py  log  segment-training-data.py  segment.py  solver.py
captcha/stats/: histo.py
crypto1/: solve.py
crypto2/: flag  solve.py
crypto3/: solve.py
cscg20.rep/: project.prp  projectState
evmoji/: .gdb_history  .gdbinit  brute  brute.go  fakeinput  gdb.dot  graph.dot  graph.pickle  init.core  init.state  leet.py  list  log  log1  log3  numbers  scratch  solve.bak.py  solve.py  solve.py.flag  special-last  test.in  trace  trace.pickle
evmoji/in/: test
follow-the-white-rabbit/: notes.org  uTinyRipper.exe.config
matrix/: Thumbs.db  extract.py  matrix.py  notes.org  secret.txt  solve.py  variations.py  writeup.md
matrix/wavdumper-0.5/: readme.html  test_wavdumper.py  wavdumper.py
maze/: .gdb_history  .gdbinit  Makefile  fin  go.mod  go.sum  impressions.xcf  map.go  movement.go  notes.org  protocol.go  pts  replay.sh  server.go  session.go  switch-config.sh  takeover.go  types.cs  utils.py  writeup1.md  writeup2.md  writeup3.md  writeup4.md  writeup5.md  writeup6.md
maze/bin.arm64/: racer
maze/client/: main.go  outside.json  route.json.cur  route.json.opt  route.json.orig  route.json.undisc.2  run
polyrun/: eval.pl  log  run.pl  run.pl.orig  run.pl.patched  run.pl.work  runner.py  winscript
pwn1/: .gdb_history  a.out  pwn1.c  script.py
pwn2/: pwn2.c  script.py
pwn3/: .gdb_history  pwn3.c  script.py
reme1/: enc  solve.py
reme2/: Program.cs  reme2.csproj  solve.py
rev1/: solve.py
rev2/: solve.py
rev3/: solve.py
ropnop/: .gdb_history  ropnop.c  ropnop.own  script.py
rsa-service/: notes.org  primes  primes.gp  smooth.bak.py  smooth.orig.py  smooth.py  solve.py
saas/: Instructions.md  exploit  exploit.cpp  exploit.nut  notes.org  sq.c  writeup.md
saas/squirrel/sq/: CMakeLists.txt  exploit.orig.cpp  sq.c  sq_fuzz.cpp
stayw0ke/: config.toml  notes.org  race.go  solve.py  writeup.md
steg2/: bits  pattern.xcf  solve  url
steg3/: pass  zip
win_experience/: binwalk  explorer.handles  flag.txt  handles  iehist  notes.org  ps  ps.scan  solve.py  usage  words  writeup1.md  writeup2.md
xmas/: solve.py  writeup.md
(+62 files in other folders)
